crates/zeph-core/src/config/types/tests/snapshots/zeph_core__config__types__tests__config_default_snapshot_lsp_policy.snap
---
source: crates/zeph-core/src/config/types/tests/mod.rs
expression: toml_str
---
[agent]
name = "Zeph"
max_tool_iterations = 10
auto_update_check = true
instruction_files = []
instruction_auto_detect = true
max_tool_retries = 2
tool_repeat_threshold = 2
max_retry_duration_secs = 30

[llm]
provider = "ollama"
base_url = "http://localhost:11434"
model = "qwen3:8b"
embedding_model = "qwen3-embedding"
response_cache_enabled = false
response_cache_ttl_secs = 3600
router_ema_enabled = false
router_ema_alpha = 0.1
router_reorder_interval = 10

[skills]
paths = ["<DEFAULT_SKILLS_DIR>"]
max_active_skills = 5
disambiguation_threshold = 0.05
cosine_weight = 0.7
hybrid_search = true
prompt_mode = "auto"

[skills.learning]
enabled = false
auto_activate = false
min_failures = 3
improve_threshold = 0.7
rollback_threshold = 0.5
min_evaluations = 5
max_versions = 10
cooldown_minutes = 60
correction_detection = true
correction_confidence_threshold = 0.6
detector_mode = "regex"
judge_model = ""
judge_adaptive_low = 0.5
judge_adaptive_high = 0.8
correction_recall_limit = 3
correction_min_similarity = 0.75
auto_promote_min_uses = 50
auto_promote_threshold = 0.95
auto_demote_min_uses = 30
auto_demote_threshold = 0.4

[skills.trust]
default_level = "quarantined"
local_level = "trusted"
hash_mismatch_level = "quarantined"
scan_on_load = true

[memory]
sqlite_path = "<DEFAULT_SQLITE_PATH>"
history_limit = 50
qdrant_url = "http://localhost:6334"
summarization_threshold = 50
context_budget_tokens = 0
soft_compaction_threshold = 0.6
hard_compaction_threshold = 0.9
compaction_preserve_tail = 6
compaction_cooldown_turns = 2
auto_budget = true
prune_protect_tokens = 40000
cross_session_score_threshold = 0.35
vector_backend = "qdrant"
token_safety_margin = 1.0
redact_credentials = true
autosave_assistant = false
autosave_min_length = 20
tool_call_cutoff = 6
sqlite_pool_size = 5
shutdown_summary = true
shutdown_summary_min_messages = 4
shutdown_summary_max_messages = 20

[memory.compression_guidelines]
enabled = false
update_threshold = 5
max_guidelines_tokens = 500
max_pairs_per_update = 10
detection_window_turns = 10
update_interval_secs = 300
max_stored_pairs = 100

[memory.semantic]
enabled = true
recall_limit = 5
vector_weight = 0.7
keyword_weight = 0.3
temporal_decay_enabled = false
temporal_decay_half_life_days = 30
mmr_enabled = false
mmr_lambda = 0.7

[memory.sessions]
max_history = 100
title_max_chars = 60

[memory.documents]
collection = "zeph_documents"
chunk_size = 1000
chunk_overlap = 100
top_k = 3
rag_enabled = false

[memory.eviction]
policy = "ebbinghaus"
max_entries = 0
sweep_interval_secs = 3600

[memory.compression]
strategy = "reactive"
model = ""

[memory.routing]
strategy = "heuristic"

[memory.graph]
enabled = false
extract_model = ""
max_entities_per_message = 10
max_edges_per_message = 15
community_refresh_interval = 100
entity_similarity_threshold = 0.85
extraction_timeout_secs = 15
use_embedding_resolution = false
entity_ambiguous_threshold = 0.7
max_hops = 2
recall_limit = 10
expired_edge_retention_days = 90
max_entities = 0
community_summary_max_prompt_bytes = 8192
community_summary_concurrency = 4
lpa_edge_chunk_size = 10000
temporal_decay_rate = 0.0
edge_history_limit = 100

[memory.graph.note_linking]
enabled = false
similarity_threshold = 0.85
top_k = 10
timeout_secs = 5

[tools]
enabled = true
summarize_output = true

[tools.shell]
timeout = 30
blocked_commands = []
allowed_commands = []
allowed_paths = []
allow_network = true
confirm_patterns = [
    "rm ",
    "git push -f",
    "git push --force",
    "drop table",
    "drop database",
    "truncate ",
    "$(",
    "`",
    "<(",
    ">(",
    "<<<",
    "eval ",
]

[tools.scrape]
timeout = 15
max_body_bytes = 4194304

[tools.audit]
enabled = false
destination = "stdout"

[tools.filters]
enabled = true

[tools.filters.security]
enabled = true
extra_patterns = []

[tools.overflow]
threshold = 50000
retention_days = 7
max_overflow_bytes = 10485760

[tools.anomaly]
enabled = false
window_size = 10
error_threshold = 0.5
critical_threshold = 0.8

[tools.policy]
enabled = false
default_effect = "deny"
rules = []

[a2a]
enabled = false
host = "0.0.0.0"
port = 8080
public_url = ""
rate_limit = 60
require_tls = true
ssrf_protection = true
max_body_size = 1048576

[mcp]
servers = []
allowed_commands = []
max_dynamic_servers = 0

[index]
enabled = false
search_enabled = true
watch = true
max_chunks = 12
score_threshold = 0.25
budget_ratio = 0.4
repo_map_tokens = 500
repo_map_ttl_secs = 300

[vault]
backend = "env"

[security]
redact_secrets = true
autonomy_level = "supervised"

[security.content_isolation]
enabled = true
max_content_size = 65536
flag_injection_patterns = true
spotlight_untrusted = true

[security.content_isolation.quarantine]
enabled = false
sources = [
    "web_scrape",
    "a2a_message",
]
model = "claude"

[security.exfiltration_guard]
block_markdown_images = true
validate_tool_urls = true
guard_memory_writes = true

[security.memory_validation]
enabled = true
max_content_bytes = 4096
max_entity_name_bytes = 256
max_fact_bytes = 1024
max_entities_per_extraction = 50
max_edges_per_extraction = 100
forbidden_content_patterns = []

[security.pii_filter]
enabled = false
filter_email = true
filter_phone = true
filter_ssn = true
filter_credit_card = true
custom_patterns = []

[security.rate_limit]
enabled = false
shell_calls_per_minute = 30
web_calls_per_minute = 20
memory_calls_per_minute = 60
mcp_calls_per_minute = 40
other_calls_per_minute = 60
circuit_breaker_cooldown_secs = 30

[timeouts]
llm_seconds = 120
llm_request_timeout_secs = 600
embedding_seconds = 30
a2a_seconds = 30
max_parallel_tools = 8

[cost]
enabled = false
max_daily_cents = 500

[observability]
exporter = ""
endpoint = "http://localhost:4317"

[gateway]
enabled = false
bind = "127.0.0.1"
port = 8090
rate_limit = 120
max_body_size = 1048576

[daemon]
enabled = false
pid_file = "~/.zeph/zeph.pid"
health_interval_secs = 30
max_restart_backoff_secs = 60

[scheduler]
enabled = true
tick_interval_secs = 60
max_tasks = 100
tasks = []

[tui]
show_source_labels = false

[acp]
enabled = false
agent_name = "zeph"
agent_version = "0.15.1"
max_sessions = 4
session_idle_timeout_secs = 1800
broadcast_capacity = 256
available_models = []
transport = "stdio"
http_bind = "127.0.0.1:9800"
discovery_enabled = true

[acp.lsp]
enabled = true
auto_diagnostics_on_save = true
max_diagnostics_per_file = 20
max_diagnostic_files = 5
max_references = 100
max_workspace_symbols = 50
request_timeout_secs = 10

[agents]
enabled = false
max_concurrent = 5
extra_dirs = []
default_disallowed_tools = []
allow_bypass_permissions = false
transcript_enabled = true
transcript_max_files = 50

[agents.hooks]
start = []
stop = []

[orchestration]
enabled = false
max_tasks = 20
max_parallel = 4
default_failure_strategy = "abort"
default_max_retries = 3
task_timeout_secs = 300
planner_max_tokens = 4096
dependency_context_budget = 16384
confirm_before_execute = true
aggregator_max_tokens = 4096
deferral_backoff_ms = 100

[experiments]
enabled = false
max_experiments = 20
max_wall_time_secs = 3600
min_improvement = 0.5
eval_budget_tokens = 100000
auto_apply = false

[experiments.schedule]
enabled = false
cron = "0 3 * * *"
max_experiments_per_run = 20
max_wall_time_secs = 1800

[debug]
enabled = false
output_dir = "<DEFAULT_DEBUG_DIR>"
format = "json"

[debug.traces]
otlp_endpoint = "http://localhost:4317"
service_name = "zeph"
redact = true

[logging]
file = "<DEFAULT_LOG_FILE>"
level = "info"
rotation = "daily"
max_files = 7

[lsp]
enabled = false
mcp_server_id = "mcpls"
token_budget = 2000
call_timeout_secs = 5

[lsp.diagnostics]
enabled = true
max_per_file = 20
min_severity = "error"

[lsp.hover]
enabled = false
max_symbols = 10
